# vec

./: .gitignore  CMakeLists.txt  README.md
include/: aux.hh  compilerVersion.hh
src/: compilerVersion.cc  main.cc
